Fix various issues and refactor